add README, rename dtos
