# src/main/java/ru/neoflex/application/controllers/ApplicationController.java
@@ -6,8 +6,8 @@ import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.RestController;
 import ru.neoflex.application.services.ApplicationService;
 import ru.neoflex.openapi.controllers.ApplicationApi;
-import ru.neoflex.openapi.dtos.LoanApplicationRequestDTO;
-import ru.neoflex.openapi.dtos.LoanOfferDTO;
+import ru.neoflex.openapi.dtos.LoanApplicationRequest;
+import ru.neoflex.openapi.dtos.LoanOffer;
 
 import java.util.List;
 
@@ -17,12 +17,12 @@ public class ApplicationController implements ApplicationApi {
     private final ApplicationService applicationService;
 
     @Override
-    public ResponseEntity<List<LoanOfferDTO>> createApplication(LoanApplicationRequestDTO loanApplicationRequestDTO) {
+    public ResponseEntity<List<LoanOffer>> createApplication(LoanApplicationRequest loanApplicationRequestDTO) {
         return new ResponseEntity<>(applicationService.createApplication(loanApplicationRequestDTO), HttpStatus.OK);
     }
 
     @Override
-    public ResponseEntity<Void> applyOffer(LoanOfferDTO loanOfferDTO) {
+    public ResponseEntity<Void> applyOffer(LoanOffer loanOfferDTO) {
         applicationService.applyOffer(loanOfferDTO);
         return new ResponseEntity<>(HttpStatus.OK);
     }
